--- a/package.json
+++ b/package.json
@@ -3,25 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "analyze": "ANALYZE=true next build",
+    "lighthouse": "lighthouse http://localhost:3000 --output=json --output-path=./lighthouse-report.json",
+    "perf-test": "npm run build && npm run lighthouse",
+    "export": "next build && next export"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.0",
+    "@types/gtag.js": "^0.0.20",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.400.0",
+    "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "web-vitals": "^5.1.0",
+    "workbox-webpack-plugin": "^7.0.0",
+    "zustand": "^4.5.0",
+     "@next/bundle-analyzer": "^15.4.6",
+    "autoprefixer": "^10.4.21",
+    "critters": "^0.0.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@next/bundle-analyzer": "^14.2.0",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "@eslint/eslintrc": "^3"
+    "lighthouse": "^12.0.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
