feat: initial QuickConvert project setup
- Next.js 14 with App Router
- TypeScript configuration
- Tailwind CSS styling
- Unit converter with 6 categories
- Voice input functionality
- Performance optimizations for sub-1.5s loading
- SEO optimization with structured data

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "analyze": "ANALYZE=true next build",
     "lighthouse": "lighthouse http://localhost:3000 --output=json --output-path=./lighthouse-report.json",
     "perf-test": "npm run build && npm run lighthouse",
-    "export": "next build && next export"
+    "export": "next build && next export",
+    "release": "git checkout main && git pull origin main && git merge develop && git push origin main",
+    "deploy": "npm run build && git add . && git commit -m 'build: update build files' && git push"
   },
   "dependencies": {
     "@headlessui/react": "^2.0.0",
