--- a/package.json
+++ b/package.json
@@ -15,34 +15,51 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.0",
+    "@next/bundle-analyzer": "^15.4.6",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@types/gtag.js": "^0.0.20",
+    "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "critters": "^0.0.23",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.400.0",
     "next": "15.4.6",
+    "next-themes": "^0.4.6",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^5.1.0",
     "workbox-webpack-plugin": "^7.0.0",
-    "zustand": "^4.5.0",
-     "@next/bundle-analyzer": "^15.4.6",
-    "autoprefixer": "^10.4.21",
-    "critters": "^0.0.23",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@next/bundle-analyzer": "^14.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "autoprefixer": "^10.4.19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "lighthouse": "^12.0.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5"
   }
 }
